# AI_Projects

./: .env.example  .gitignore  README.md  pyproject.toml  railway.json  render.yaml  requirements.txt  vercel_app.py
Interactive-AI-Tutor/: .gitignore  README.md  requirements.txt  vercel.json
Interactive-AI-Tutor/backend/app/: main.py
Interactive-AI-Tutor/backend/app/prompts/: teacher_system_prompt.py
Interactive-AI-Tutor/backend/app/routes/: chat.py
Interactive-AI-Tutor/backend/app/services/: stt_service.py
backend/app/config/: api_keys.py  providers.py
backend/app/prompts/: teacher_system_prompt.py
backend/app/routes/: chat.py
backend/app/services/: llm_service.py  math_speech.py  session_store.py  stt_service.py  tts_service.py
frontend/static/css/: style.css
frontend/static/js/: app.js
frontend/templates/: index.html
